--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item me-4"><a class="nav-link" href="#home">HOME</a></li>
-                            <li class="nav-item me-4"><a class="nav-link" href="#about">ABOUT</a></li>
-                            <li class="nav-item me-4"><a class="nav-link" href="#portfolio">PORTOFOLIO</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
+                            <li class="nav-item me-4"><a class="nav-link" href="#home">Beranda</a></li>
+                            <li class="nav-item me-4"><a class="nav-link" href="#about">Madu Local</a></li>
+                            <li class="nav-item me-4"><a class="nav-link" href="#portfolio">Masukan</a></li>
                         </ul>
                     </div>
                 </div>
@@ -107,6 +106,12 @@
                         <a href="#" class="read" data-aos="zoom-in" data-aos-offset="200">Baca Selengkapnya</a>
                     </div>
                 </div>
+                <!-- Text -->
+                <div class="col-lg-6 hero-equal">
+                    <div>
+                       <img src="ma" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -125,8 +130,8 @@
         </path>
     </svg>
     <!--Section2-->
-    <div class="container mb-4">
-        <div class="row d-flex align-items-center">
+    <div class="container mb-4 mt-3">
+        <div class="row align-items-center text-center text-lg-start">
             <!-- Kolom Gambar -->
             <div class="col-lg-6 mb-4 mb-lg-0 text-center">
                 <img src="Group 6.png" alt="Madu" class="img-fluid" data-aos="zoom-in">
