--- a/index.html
+++ b/index.html
@@ -2,160 +2,235 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MaduPedia</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Google Font Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 
     <style>
         body {
-            font-family: Arial, sans-serif;
-            color: #ffffff;
+            font-family: 'Poppins', sans-serif;
         }
 
-        .custom-navbar {
-            background: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+        .navbar {
+            border-radius: 30px;
         }
 
-        .custom-navbar .navbar-brand,
-        .custom-navbar .nav-link {
-            color: black;
-            font-weight: bold;
-            font-size: 14px;
+        .navbar-brand img {
+            height: 45px;
         }
 
-        .custom-navbar .nav-link:hover {
-            background: #FFD65A;
-            color: #fff !important;
-            border-radius: 10px;
-            margin-left: 10px;
-            padding-left: 10px;
-        }
-
-        .headersection {
+        .hero {
             background: linear-gradient(90deg, #FFF7D6 0%, #FFE7A3 50%, #FFE3A0 100%);
-            padding-top: 30px;
-            padding-bottom: 30px;
+            padding: 80px 0;
         }
 
-        .read {
-            text-decoration: none;
-            border: solid #FDBB0F 2px;
-            padding: 8px 16px;
-            color: #FDBB0F;
-            border-radius: 8px;
+        .hero-img {
+            width: 100%;
+            max-width: 350px;
         }
 
-        .read:hover {
-            color: white;
-            background-color: #FDBB0F;
+        .btn-outline-warning {
+            border-width: 2px;
         }
-        .readmore:hover{
-            background-color: white;
-             border: solid #FDBB0F 2px;
-                color: #FDBB0F
+
+        .stats-box {
+            background: #FFCE54;
+            border-radius: 12px;
+            padding: 25px 0;
+            color: #fff;
+            font-weight: 600;
+        }
+
+        @media (max-width: 768px) {
+            .stats-box {
+                max-width: 250px;
+                justify-content: center;
+                align-items: center;
+                margin: auto;
+            }
+        }
+
+        .stats-box h3 {
+            font-size: 32px;
+            margin-bottom: 0;
+        }
+
+        /* Responsive tweaks */
+        @media (max-width: 768px) {
+            .hero {
+                text-align: center;
+                padding: 40px 0;
+            }
+
+            .hero .col-md-6:first-child {
+                margin-bottom: 40px;
+            }
+
+            /* ===== HIDE HERO IMAGE ON MOBILE ===== */
+            .hero-img {
+                display: none;
+            }
+        }
+
+        /* Gambar besar di desktop */
+        .why-img {
+            width: 100%;
+            max-width: 480px;
+        }
+
+        /* Mobile — supaya tidak terlalu besar */
+        @media (max-width: 768px) {
+            .why-img {
+                max-width: 330px;
+            }
+        }
+
+        .nav-item:hover {
+            background-color: #FFCE54;
+            color: black;
+            border-radius: 10px;
+        }
+
+        @media (max-width: 768px) {
+            .why-img {
+                max-width: 330px;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div class="headersection">
-        <!-- Navbar -->
-        <div class="container">
-            <nav class="navbar custom-navbar navbar-expand-lg mt-3">
-                <div class="container-fluid">
-                    <img src="Frame 1 9.png" alt="" width="100px">
 
-                    <!-- Hamburger mobile -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"
-                            style="background-image: url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/icons/list.svg'); background-size: contain;"></span>
+
+
+    <!-- HERO SECTION -->
+    <section class="hero" style="margin-top: -10px;">
+        <div class="container">
+            <!-- NAVBAR -->
+            <nav class="navbar navbar-expand-lg bg-white shadow-sm py-3" style="margin-top: -20px;">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img src="Frame 1 9.png" alt="Logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item me-4"><a class="nav-link" href="#home">Beranda</a></li>
-                            <li class="nav-item me-4"><a class="nav-link" href="#about">Madu Local</a></li>
-                            <li class="nav-item me-4"><a class="nav-link" href="#portfolio">Masukan</a></li>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav gap-3">
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#">Home</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#">About</a></li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#">Service</a></li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#">Information</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
-        </div>
-
-        <!-- HERO SECTION -->
-        <div class="container py-5">
-            <div class="row d-lg-flex">
-                <!-- Text -->
-                <div class="col-lg-6 hero-equal">
-                    <div>
-                        <h1 data-aos="fade-right"><b><span style="color: black;">Selamat Datang di Website </span>
-                                <span style="color: #FDBB0F;">MaduPedia</span></b></h1>
-
-                        <p class="mt-3" style="color: black; margin-bottom: 30px;" data-aos="fade-right"
-                            data-aos-offset="200" data-aos-easing="ease-in-sine">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer diam est, malesuada quis
-                            lectus id, efficitur efficitur nibh.
-                        </p>
-                        <a href="#" class="read" data-aos="zoom-in" data-aos-offset="200">Baca Selengkapnya</a>
-                    </div>
+            <!--MainContent-->
+            <div class="row align-items-center mt-5">
+                <!-- TEXT -->
+                <div class="col-md-6">
+                    <h2 class="fw-bold" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine">
+                        Selamat Datang di <br> Website
+                        <span class="text-warning">MaduPedia</span>
+                    </h2>
+                    <p class="mt-3" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit. Integer diam est, malesuada
+                        quis lectus id, efficitur efficitur nibh. Cras suscipit.</p>
+                    <button class="btn btn-outline-warning mt-3 px-4 py-2 fw-semibold mb-5">Baca Selengkapnya</button>
                 </div>
-                <!-- Text -->
-                <div class="col-lg-6 hero-equal">
-                    <div>
-                       <img src="ma" alt="">
-                    </div>
+
+                <!-- IMAGE -->
+                <div class="col-md-6 text-center">
+                    <img src="ChatGPT_Image_Nov_11__2025__08_53_33_AM-removebg-preview 1.png" class="hero-img">
                 </div>
+
             </div>
         </div>
-    </div>
-    <!--Wave-->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <defs>
-            <linearGradient id="gradWave" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" stop-color="#FFF7D6" />
-                <stop offset="50%" stop-color="#FFE7A3" />
-                <stop offset="100%" stop-color="#FFE3A0" />
-            </linearGradient>
-        </defs>
+    </section>
 
-        <path fill="url(#gradWave)" fill-opacity="1"
-            d="M0,256L16,234.7C32,213,64,171,96,138.7C128,107,160,85,192,112C224,139,256,213,288,213.3C320,213,352,139,384,96C416,53,448,43,480,74.7C512,107,544,181,576,218.7C608,256,640,256,672,213.3C704,171,736,85,768,53.3C800,21,832,43,864,64C896,85,928,107,960,101.3C992,96,1024,64,1056,96C1088,128,1120,224,1152,218.7C1184,213,1216,107,1248,85.3C1280,64,1312,128,1344,149.3C1376,171,1408,149,1424,138.7L1440,128L1440,0L1424,0C1408,0,1376,0,1344,0C1312,0,1280,0,1248,0C1216,0,1184,0,1152,0C1120,0,1088,0,1056,0C1024,0,992,0,960,0C928,0,896,0,864,0C832,0,800,0,768,0C736,0,704,0,672,0C640,0,608,0,576,0C544,0,512,0,480,0C448,0,416,0,384,0C352,0,320,0,288,0C256,0,224,0,192,0C160,0,128,0,96,0C64,0,32,0,16,0L0,0Z">
-        </path>
-    </svg>
-    <!--Section2-->
-    <div class="container mb-4 mt-3">
-        <div class="row align-items-center text-center text-lg-start">
-            <!-- Kolom Gambar -->
-            <div class="col-lg-6 mb-4 mb-lg-0 text-center">
-                <img src="Group 6.png" alt="Madu" class="img-fluid" data-aos="zoom-in">
-            </div>
+    <!-- STATISTIK -->
+    <section class="mt-n4 me-3 ms-3" style="margin-top: -80px;">
+        <div class="container">
+            <div class="row text-center stats-box shadow">
 
-            <!-- Kolom Text -->
-            <div class="col-lg-6 text-center text-lg-start">
-                <h3 class="fw-bold" style="color: black;" data-aos="fade-right">Kenapa harus mengkonsumsi Madu 🍯?</h3>
-                <p class="mt-3" style="color: black;" data-aos="fade-right">
-                    Madu memiliki berbagai manfaat seperti meningkatkan daya tahan tubuh,
-                    memperbaiki kualitas tidur, memberikan energi alami, serta baik untuk
-                    kesehatan pencernaan dan kulit.
-                </p>
-                <a href="#" class="readmore btn btn-warning px-4 fw-bold">Pelajari Lebih Lanjut</a>
+                <div class="col-md-4 border-end border-light mb-3 mt-3">
+                    <p class="mb-1">Madu Local</p>
+                    <h3 class="count" data-target="100">0</h3>
+                </div>
+
+                <div class="col-md-4 border-end border-light mb-3 mt-3">
+                    <p class="mb-1">Penjual Madu</p>
+                    <h3 class="count" data-target="1500">0</h3>
+                </div>
+
+                <div class="col-md-4 mt-3">
+                    <p class="mb-1">Peternak Madu</p>
+                    <h3 class="count" data-target="210">0</h3>
+                </div>
+
             </div>
         </div>
+    </section>
 
-    </div>
 
-    <!-- Script -->
+    <!-- WHY SECTION -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 text-center">
+                    <img src="Group 6.png" class="img-fluid why-img" style="max-width: 500px;">
+                </div>
+
+                <div class="col-md-6 mt-4 mt-md-0">
+                    <h3 class="fw-bold">Kenapa harus <br> mengkonsumsi
+                        <span class="text-warning">Madu 🍯</span>?
+                    </h3>
+                    <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer diam est, malesuada
+                        quis lectus id, efficitur efficitur nibh. Cras suscipit.</p>
+                    <button class="btn btn-outline-warning px-4 py-2 fw-semibold mb-5">Baca Selengkapnya</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>AOS.init();</script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const counters = document.querySelectorAll(".count");
+            const speed = 80; // semakin kecil = semakin cepat
 
+            counters.forEach(counter => {
+                const animate = () => {
+                    const target = +counter.getAttribute("data-target");
+                    const value = +counter.innerText;
+                    const increment = Math.ceil(target / speed);
+
+                    if (value < target) {
+                        counter.innerText = value + increment;
+                        setTimeout(animate, 20);
+                    } else {
+                        counter.innerText = target + "+";
+                    }
+                };
+
+                animate();
+            });
+        });
+
+    </script>
 </body>
 
 </html>
