--- a/test.html
+++ b/test.html
@@ -47,8 +47,8 @@
             color: #fff;
             font-weight: 600;
         }
-         
-         @media (max-width: 768px) {
+
+        @media (max-width: 768px) {
             .stats-box {
                 max-width: 250px;
                 justify-content: center;
@@ -91,11 +91,13 @@
                 max-width: 330px;
             }
         }
-        .nav-item:hover{
+
+        .nav-item:hover {
             background-color: #FFCE54;
             color: black;
             border-radius: 10px;
         }
+
         @media (max-width: 768px) {
             .why-img {
                 max-width: 330px;
@@ -140,9 +142,8 @@
                         Selamat Datang di <br> Website
                         <span class="text-warning">MaduPedia</span>
                     </h2>
-                    <p class="mt-3" data-aos="fade-right"
-     data-aos-offset="300"
-     data-aos-easing="ease-in-sine">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer diam est, malesuada
+                    <p class="mt-3" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit. Integer diam est, malesuada
                         quis lectus id, efficitur efficitur nibh. Cras suscipit.</p>
                     <button class="btn btn-outline-warning mt-3 px-4 py-2 fw-semibold mb-5">Baca Selengkapnya</button>
                 </div>
@@ -195,7 +196,7 @@
                     </h3>
                     <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer diam est, malesuada
                         quis lectus id, efficitur efficitur nibh. Cras suscipit.</p>
-                          <button class="btn btn-outline-warning px-4 py-2 fw-semibold mb-5">Baca Selengkapnya</button>
+                    <button class="btn btn-outline-warning px-4 py-2 fw-semibold mb-5">Baca Selengkapnya</button>
                 </div>
 
             </div>
