--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav gap-3">
-                            <li class="nav-item"><a class="nav-link fw-semibold" href="#">Home</a>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#" style="color: #fcbb16;">Home</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link fw-semibold" href="#">About</a></li>
-                            <li class="nav-item"><a class="nav-link fw-semibold" href="#">Service</a></li>
-                            <li class="nav-item"><a class="nav-link fw-semibold" href="#">Information</a></li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#" style="color: #fcbb16;">About</a></li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#" style="color: #fcbb16;">Service</a></li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#" style="color: #fcbb16;">Information</a></li>
                         </ul>
                     </div>
                 </div>
