--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!-- Google Font Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -19,7 +19,7 @@
         }
 
         .navbar {
-            border-radius: 30px;
+            border-radius: 40px;
         }
 
         .navbar-brand img {
@@ -103,13 +103,68 @@
                 max-width: 330px;
             }
         }
+
+        .madu {
+            background: linear-gradient(90deg, #FFF7D6 0%, #FFE7A3 50%, #FFE3A0 100%);
+            padding: 50px;
+        }
+
+        .product-card {
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+            background: #fff;
+            transition: 0.3s;
+        }
+
+        .product-card:hover {
+            transform: translateY(-4px);
+        }
+
+        .product-badge {
+            position: absolute;
+            top: 12px;
+            left: 12px;
+            background: #FFB800;
+            color: white;
+            padding: 4px 14px;
+            border-radius: 20px;
+            font-weight: 600;
+            font-size: 14px;
+        }
+
+        .product-img {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+        }
+
+        .location-text {
+            color: gray;
+            font-size: 14px;
+        }
+
+        .check-btn {
+            background: #FFB800;
+            border: none;
+            padding: 8px 20px;
+            border-radius: 10px;
+            color: white;
+            font-weight: 600;
+        }
+
+        @media (max-width: 768px) {
+            .product-card {
+                width: 250px;
+                margin-bottom: 30px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
     </style>
 </head>
 
 <body>
-
-
-
     <!-- HERO SECTION -->
     <section class="hero" style="margin-top: -10px;">
         <div class="container">
@@ -125,11 +180,15 @@
 
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav gap-3">
-                            <li class="nav-item"><a class="nav-link fw-semibold" href="#" style="color: #fcbb16;">Home</a>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#"
+                                    style="color: #fcbb16;">Home</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link fw-semibold" href="#" style="color: #fcbb16;">About</a></li>
-                            <li class="nav-item"><a class="nav-link fw-semibold" href="#" style="color: #fcbb16;">Service</a></li>
-                            <li class="nav-item"><a class="nav-link fw-semibold" href="#" style="color: #fcbb16;">Information</a></li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#"
+                                    style="color: #fcbb16;">About</a></li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#"
+                                    style="color: #fcbb16;">Service</a></li>
+                            <li class="nav-item"><a class="nav-link fw-semibold" href="#"
+                                    style="color: #fcbb16;">Information</a></li>
                         </ul>
                     </div>
                 </div>
@@ -138,10 +197,10 @@
             <div class="row align-items-center mt-5">
                 <!-- TEXT -->
                 <div class="col-md-6">
-                    <h2 class="fw-bold" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine">
+                    <h1 class="fw-bold" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine">
                         Selamat Datang di <br> Website
                         <span class="text-warning">MaduPedia</span>
-                    </h2>
+                    </h1>
                     <p class="mt-3" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">Lorem
                         ipsum dolor sit amet, consectetur adipiscing elit. Integer diam est, malesuada
                         quis lectus id, efficitur efficitur nibh. Cras suscipit.</p>
@@ -186,11 +245,11 @@
     <section class="py-5">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-center" data-aos="fade-right">
                     <img src="Group 6.png" class="img-fluid why-img" style="max-width: 500px;">
                 </div>
 
-                <div class="col-md-6 mt-4 mt-md-0">
+                <div class="col-md-6 mt-4 mt-md-0" data-aos="fade-left">
                     <h3 class="fw-bold">Kenapa harus <br> mengkonsumsi
                         <span class="text-warning">Madu 🍯</span>?
                     </h3>
@@ -202,9 +261,159 @@
             </div>
         </div>
     </section>
+
+    <!--ProdukMadu-->
+    <div class="madu mb-5">
+        <!--TextHeader-->
+        <h3 class="text-center mb-3"><b>Madu Local</b></h3>
+        <!--Divider-->
+
+        <!--MaduItem-->
+        <div class="row mt-3 justify-content-center">
+
+            <!-- Card 1 -->
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center mb-4" data-aos="fade-right">
+                <div class="product-card position-relative">
+
+                    <span class="product-badge">MaduPedia</span>
+
+                    <img src="madu.jpg" class="product-img" alt="Madu">
+
+                    <div class="p-3">
+                        <p class="location-text">
+                            <i class="bi bi-geo-alt"></i> Sumbawa
+                        </p>
+                        <h5 class="fw-bold">Madu Sumbawa</h5>
+                        <button class="check-btn mt-2">Cek Disini</button>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center mb-4" data-aos="fade-right">
+                <div class="product-card position-relative">
+
+                    <span class="product-badge">MaduPedia</span>
+
+                    <img src="madu.jpg" class="product-img" alt="Madu">
+
+                    <div class="p-3">
+                        <p class="location-text">
+                            <i class="bi bi-geo-alt"></i> Sumbawa
+                        </p>
+                        <h5 class="fw-bold">Madu Sumbawa</h5>
+                        <button class="check-btn mt-2">Cek Disini</button>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center mb-4" data-aos="fade-right">
+                <div class="product-card position-relative">
+
+                    <span class="product-badge">MaduPedia</span>
+
+                    <img src="madu.jpg" class="product-img" alt="Madu">
+
+                    <div class="p-3">
+                        <p class="location-text">
+                            <i class="bi bi-geo-alt"></i> Sumbawa
+                        </p>
+                        <h5 class="fw-bold">Madu Sumbawa</h5>
+                        <button class="check-btn mt-2">Cek Disini</button>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!--HubungiKami-->
+    <section id="hubungi">
+        <div class="container mt-3 mb-5">
+            <h6 class="text-center"><b>Kami butuh pendapatmu Bantu kembangkan Website kami agar bisa mendapatkan
+                    Informasi Madu Local lebih banyak lagi</b></h5>
+                <div class="card mt-3 shadow">
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <label class="form-label">Email</label>
+                            <input id="email" type="email" class="form-control" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Pesan</label>
+                            <textarea id="pesan" class="form-control" rows="4" required></textarea>
+                        </div>
+
+                        <button onclick="kirimPesan()" class="btn btn-outline-warning px-4 py-2 fw-semibold mt-3">
+                            Kirim Pesan
+                        </button>
+                    </div>
+                </div>
+        </div>
+    </section>
+
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
+    </script>
+    <!-- EmailJS -->
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+        // Inisialisasi EmailJS
+        (function () {
+            emailjs.init("8LyF6vW85PxCsdCrg"); // Ganti
+        })();
+
+        function kirimPesan() {
+            const email = document.getElementById("email").value;
+            const pesan = document.getElementById("pesan").value;
+
+            if (!email || !pesan) {
+                Swal.fire({
+                    icon: "warning",
+                    title: "Oops...",
+                    text: "Email dan pesan wajib diisi!",
+                });
+                return;
+            }
+
+            const data = {
+                user_email: email,
+                user_message: pesan
+            };
+
+            emailjs.send("service_btcsmhu", "template_pwijj2d", data)
+                .then(function () {
+
+                    Swal.fire({
+                        icon: "success",
+                        title: "Pesan berhasil terkirim!",
+                        text: "Terima kasih, kami akan segera membalas pesan Anda.",
+                        confirmButtonColor: "#f0ad4e"
+                    });
+
+                    // reset form
+                    document.getElementById("email").value = "";
+                    document.getElementById("pesan").value = "";
+
+                }, function (error) {
+                    Swal.fire({
+                        icon: "error",
+                        title: "Gagal mengirim!",
+                        text: "Terjadi kesalahan: " + error.text
+                    });
+                });
+        }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -220,7 +429,7 @@
 
                     if (value < target) {
                         counter.innerText = value + increment;
-                        setTimeout(animate, 20);
+                        setTimeout(animate, 80);
                     } else {
                         counter.innerText = target + "+";
                     }
@@ -231,6 +440,7 @@
         });
 
     </script>
+
 </body>
 
 </html>
