--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                             <i class="bi bi-geo-alt"></i> Sumbawa
                         </p>
                         <h5 class="fw-bold">Madu Sumbawa</h5>
-                        <button class="check-btn mt-2">Cek Disini</button>
+                        <button class="check-btn mt-2">Cek Disini </button>
                     </div>
 
                 </div>
@@ -337,7 +337,7 @@
         <div class="container mt-3 mb-5">
             <h6 class="text-center"><b>Kami butuh pendapatmu Bantu kembangkan Website kami agar bisa mendapatkan
                     Informasi Madu Local lebih banyak lagi</b></h5>
-                <div class="card mt-3 shadow">
+                <div class="card mt-3 shadow"  data-aos="flip-up">
                     <div class="card-body">
                         <div class="mb-3">
                             <label class="form-label">Email</label>
@@ -350,13 +350,24 @@
                         </div>
 
                         <button onclick="kirimPesan()" class="btn btn-outline-warning px-4 py-2 fw-semibold mt-3">
-                            Kirim Pesan
+                            Kirim Pesan <i class="bi bi-send"></i>
                         </button>
                     </div>
                 </div>
         </div>
     </section>
-
+    
+    <footer style="
+    background: linear-gradient(to right, #ffe5b3, #ffffff);
+    padding: 15px 0;
+    text-align: center;
+    font-weight: 600;
+    color: #000;
+    margin-top: 40px;
+    border-top: 1px solid #f0d9a6;
+">
+    Copyright © 2026 Madupedia
+</footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -398,7 +409,7 @@
                     Swal.fire({
                         icon: "success",
                         title: "Pesan berhasil terkirim!",
-                        text: "Terima kasih, kami akan segera membalas pesan Anda.",
+                        text: "Terima kasih atas masukan anda",
                         confirmButtonColor: "#f0ad4e"
                     });
 
